[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "predicting_heart_disease"
version = "0.0.1"
description = "This project presents an end-to-end machine learning pipeline for predicting the likelihood of heart disease in patients. The goal is to support cardiologists in making more informed and data-driven decisions regarding patient diagnosis and risk assessmen"
authors = [
  { name = "omar badr" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["predicting_heart_disease"]
include = ["pyproject.toml", "predicting_heart_disease/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["predicting_heart_disease"]
force-sort-within-sections = true

